responsinve fix horizontal overflow

--- a/front-mdd/src/app/app.component.scss
+++ b/front-mdd/src/app/app.component.scss
@@ -2,5 +2,4 @@
     width: 100%; /* Utilise toute la largeur */
     max-width: 1200px; /* Limite optionnelle */
     margin: 0 auto; /* Centrer la grille */
-    padding: 16px;
 }
