--- a/front-mdd/src/app/shared/components/home/home.component.scss
+++ b/front-mdd/src/app/shared/components/home/home.component.scss
@@ -32,4 +32,15 @@ img {
     max-width: 100%; /* Rend le logo responsive */
     height: auto;
   }
+  @media (max-width: 960px) {
+    .container > div {
+      display: flex;
+      flex-direction: column; /* Empile les boutons */
+      align-items: center; /* Centre les boutons */
+    }
   
+    button {
+      width: 100%; /* Les boutons prennent toute la largeur disponible */
+      max-width: 300px; /* Optionnel : Limite la largeur */
+    }
+  }
